--- a/src/webapp/WEB-INF/pages/car.html
+++ b/src/webapp/WEB-INF/pages/car.html
@@ -13,7 +13,7 @@
             <th>Cars Series</th>
             <th>Cars Horse Power</th>
         </tr>
-        <tr th:each="car : ${resultList}">
+        <tr th:each="car : ${cars}">
             <td th:utext="${car.model}"></td>
             <td th:utext="${car.series}"></td>
             <td th:utext="${car.hoursPower}"></td>
